syntax = "proto3";

package design.dfs.common.proto;

option java_multiple_files = true;
option java_package = "design.dfs.model.client";


message MkdirRequest {
  string path = 1;
  map<string, string> attr = 2;
}
