syntax = "proto3";

package design.dfs.common.proto;

option java_multiple_files = true;
option java_package = "design.dfs.model.namenode";

message Metadata {
  string fileName = 1;
  int32 type = 2;
  string hostname = 3;
  int64 fileSize = 4;
  map<string, string> attr = 5;
}